objects/ConsolidatedInvoiceLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ConsolidatedInvoice__c</fullName>
        <label>Consolidated Invoice</label>
        <referenceTo>ConsolidatedInvoice__c</referenceTo>
        <relationshipLabel>Consolidated Invoice Line Items</relationshipLabel>
        <relationshipName>ConsolidatedInvoiceLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_ABC__c</fullName>
        <formula>Invoice__r.ContractABC__r.Name</formula>
        <label>Contract ABC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyTaxValue1__c</fullName>
        <label>Currency Tax Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyTaxValue2__c</fullName>
        <label>Currency Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyTaxValue3__c</fullName>
        <label>Currency Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyValue__c</fullName>
        <label>Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Email__c</fullName>
        <formula>Invoice__r.ContractABC__r.Invoice_Contact__r.Email</formula>
        <label>Invoice Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Title__c</fullName>
        <formula>Invoice__r.ContractABC__r.Invoice_Contact__r.Title</formula>
        <label>Invoice Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <formula>Invoice__r.ContractABC__r.Invoice_Contact__r.FirstName &amp; &quot; &quot; &amp;  Invoice__r.ContractABC__r.Invoice_Contact__r.LastName</formula>
        <label>Invoice Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Outstanding_Amount__c</fullName>
        <description>Created as part of CR-3453

Pulls the Outstanding Amount from the Sales Invoice associated with the Consolidated Invoice Line Item.</description>
        <formula>Invoice__r.c2g__OutstandingValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Consolidated Invoice Line Items</relationshipLabel>
        <relationshipName>ConsolidatedInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <formula>UnitPrice__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Value_Number__c</fullName>
        <description>Created as part of CR-3453.

This field is populated with the value of the field &quot;Invoice Outstanding Amount&quot; via the workflow rule &quot;Outstanding amount&quot; on the Consolidated Invoice object. This field is needed as a roll up summary needs to roll up a number field, not a formula field.</description>
        <label>Outstanding Value: Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consolidated Invoice Line Items</relationshipLabel>
        <relationshipName>ConsolidatedInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesInvoiceLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice Line Item</label>
        <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Consolidated Invoice Line Items</relationshipLabel>
        <relationshipName>ConsolidatedInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Consolidated Invoice Line Items (Tax Code 1)</relationshipLabel>
        <relationshipName>ConsolidatedInvoiceLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Consolidated Invoice Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>ConsolidatedInvoiceLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Consolidated Invoice Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>ConsolidatedInvoiceLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxRate1__c</fullName>
        <label>Tax Rate 1</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate3__c</fullName>
        <label>Tax Rate 3</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue1__c</fullName>
        <label>Tax Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue3__c</fullName>
        <label>Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__LineDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Consolidated Invoice Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Consolidated Invoice Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>